Fix GRPC API Validation Flaws (#1501)
* LOK-1925: add policy id checking when id is set

* LOK-1925: getEventsByNodeId

* LOK-1925: AzureActiveDiscoveryService.createDiscovery

* LOK-1925: ActiveDiscoveryService.deleteDiscovery

* LOK-1925: IcmpActiveDiscoveryService.createDiscovery

* LOK_1925: ActiveDiscoveryService.deleteDiscovery

* LOK-1925: listMonitoringSystemByLocationId and clean up

* LOK-1925: getNodeIdFromQuery startNodeScanByIds getIpInterfaceFromQuery

* LOK-1925: PassiveDiscoveryService upsertDiscovery toggleDiscovery deleteDiscovery

* LOK-1925: fix tests

* LOK-1925: add missing function

* LOK-1925: fix it test and distinguish location name and locationId

* LOK-1925: increase test coverage

* LOK-1925: increase test coverage

* LOK-1925: add event grpc test

* LOK-1925: add more test

* LOK-1925: add location check in minion certificate manger

* LOK-1925: add tag grpc policy checking

* LOK-1925: add missing file

* LOK-1925: add missing file

* LOK-1925: remove debug message

* LOK-1925: fix cert manager it test

* LOK-1925: fix inventory it test

* LOK-1925: increase test coverage

* LOK-1925: increase test coverage

* LOK-1925: increase test coverage

* LOK-1925: address PR comments

* LOK-1925: address sonarcloud quality issue